# ppt-maker

./: .env.example  .gitignore  AI_Trends_2025-2026.pptx  AI_Trends_2025-2026_Light.pptx  AI_트렌드_2025-2026.pptx  Makefile  README.md  ai-trends-en.toml  create_slides.py  create_slides_en.py  create_slides_en_light.py  presentation.md  presentation_en.md  pyproject.toml
docs/: architecture.md  design-spec.md  prd.md
examples/simple/: BMW CI Template.pptx  topic.toml
output/ai-trends-en/: report.md  report.pptx
src/ppt_maker/: __init__.py  cli.py  config.py  errors.py  pipeline.py  workspace.py
src/ppt_maker/assets/: converter.py  manager.py  simple_icons.py
src/ppt_maker/converter/: hybrid.py  pandoc.py  post_process.py  pptx_custom.py
src/ppt_maker/fonts/: korean.py  resolver.py
src/ppt_maker/research/: generator.py  llm.py
src/ppt_maker/template/: analyzer.py  filters.py  renderer.py
src/ppt_maker/template/templates/: base.md.j2
src/ppt_maker/theme/: manager.py  palette.py
src/ppt_maker/theme/themes/dark/: theme.toml
src/ppt_maker/theme/themes/default/: theme.toml
src/ppt_maker/wizard/: draft.py  research.py  review.py  session.py
tests/: conftest.py  test_analyzer.py  test_asset_integration.py  test_assets.py  test_config.py  test_errors.py  test_fonts.py  test_palette.py  test_pandoc.py  test_pipeline.py  test_pptx_custom.py  test_renderer.py  test_research.py  test_theme_manager.py  test_wizard.py  test_wizard_review.py  test_workspace.py
